--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome to the Octocat’s homepage!
+title: Welcome to the Matt-OD's homepage!
 description: Feel free to bookmark this to keep an eye on my project updates
